--- a/TestedMethodLister/TestedMethodLister.csproj
+++ b/TestedMethodLister/TestedMethodLister.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.2.0-1.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.3.0-2.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0-2.final" />
   </ItemGroup>
 
 </Project>
